// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders the margin explanation and retry path after invalid submission > margin:error 1`] = `
"root/link[0] href="/logo-devrika.png"
root/div[0] data-public-oauth-surface="margin:error" data-provider-scope="adwords" data-permission-capability="broad" data-application-behavior="read-operations-only" data-mutation-behavior="none"
root/div[0]/div[0]
root/div[0]/div[0]/a[0]
root/div[0]/div[0]/a[0]/img[0] alt="Devrika"
root/div[0]/div[0]/a[0]/span[0]
root/div[0]/div[0]/a[0]/span[0]/text "Devrika"
root/div[0]/div[0]/div[0]
root/div[0]/div[0]/div[0]/p[0]
root/div[0]/div[0]/div[0]/p[0]/text "Step 2 of 3"
root/div[0]/div[0]/div[0]/h1[0]
root/div[0]/div[0]/div[0]/h1[0]/text "Let&#x27;s set the point where your Google Ads campaigns start making or losing money"
root/div[0]/div[0]/div[0]/p[1]
root/div[0]/div[0]/div[0]/p[1]/text "Confirm the average order value and tell us the cost of goods in that order. We calculate the maximum CPA and minimum ROAS at which you still break even."
root/div[0]/div[0]/div[0]/p[2]
root/div[0]/div[0]/div[0]/p[2]/text "Gross margin must be between 1% and 99%."
root/div[0]/div[0]/div[0]/form[0]
root/div[0]/div[0]/p[0]
root/div[0]/div[0]/p[0]/text "We do not ask for invoices or access your accounting records. You can adjust the values before generating the audit.""
`;

exports[`renders the normal margin state through the canonical contract > margin:normal 1`] = `
"root/link[0] href="/logo-devrika.png"
root/div[0] data-public-oauth-surface="margin:normal" data-provider-scope="adwords" data-permission-capability="broad" data-application-behavior="read-operations-only" data-mutation-behavior="none"
root/div[0]/div[0]
root/div[0]/div[0]/a[0]
root/div[0]/div[0]/a[0]/img[0] alt="Devrika"
root/div[0]/div[0]/a[0]/span[0]
root/div[0]/div[0]/a[0]/span[0]/text "Devrika"
root/div[0]/div[0]/div[0]
root/div[0]/div[0]/div[0]/p[0]
root/div[0]/div[0]/div[0]/p[0]/text "Step 2 of 3"
root/div[0]/div[0]/div[0]/h1[0]
root/div[0]/div[0]/div[0]/h1[0]/text "Let&#x27;s set the point where your Google Ads campaigns start making or losing money"
root/div[0]/div[0]/div[0]/p[1]
root/div[0]/div[0]/div[0]/p[1]/text "Confirm the average order value and tell us the cost of goods in that order. We calculate the maximum CPA and minimum ROAS at which you still break even."
root/div[0]/div[0]/div[0]/form[0]
root/div[0]/div[0]/p[0]
root/div[0]/div[0]/p[0]/text "We do not ask for invoices or access your accounting records. You can adjust the values before generating the audit.""
`;
